packages/block-editor/src/block-extensions/block-controls/editor.scss
@import "~@wordpress/base-styles/variables";
@import "~@wordpress/base-styles/mixins";
@import "~@wordpress/base-styles/colors";

.controlled-content {
	&::before {
		content: " ";
		background: no-repeat center center transparent;
		border-radius: 100px;
		width: 16px;
		height: 20px;
		display: block;
		position: absolute;
		top: -16px;
		right: -16px;
		background-size: contain;
	}
}

.cc__block-controls {
	border-bottom: $border-width solid $gray-200;

	&.cc__block-controls--enabled {
		// Compensate for extra padding at the bottom when rules-panel is open.
		.components-panel__body {
			padding-bottom: 0;
		}
	}

	&.cc__block-controls__rules-panels--view-only {
		.cc__block-controls__top-panel,
		.cc__block-controls__rules-panels {
			opacity: 0.5;
			pointer-events: none;
		}

	}
}

.cc__block-controls__toggle-enabled {
	.components-panel__row:last-child & {
		margin-bottom: 0;
	}
}

/* Add negative margins to make them appear as normal panels. */
.cc__block-controls__rules-panels {
	margin-left: -$grid-unit-20;
	margin-right: -$grid-unit-20;
}

